@@ -198,11 +198,11 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         for (int i=0;i<5;i++){
                             if (startSelections[i]) state.players[state.playing].addCardToHand(startOptions[i]);
                         }
-                        if (startSelections[5]) state.players[state.playing].addFood("fish");
-                        if (startSelections[6]) state.players[state.playing].addFood("seed"); //why doubleadded?
-                        if (startSelections[7]) state.players[state.playing].addFood("insect"); //why double added?
-                        if (startSelections[8]) state.players[state.playing].addFood("berry");
-                        if (startSelections[9]) state.players[state.playing].addFood("rat");
+                        if (startSelections[5]) state.players[state.playing].addFood(Food.FoodType.FISH, 1);
+                        if (startSelections[6]) state.players[state.playing].addFood(Food.FoodType.SEED, 1); //why doubleadded?
+                        if (startSelections[7]) state.players[state.playing].addFood(Food.FoodType.INSECT, 1); //why double added?
+                        if (startSelections[8]) state.players[state.playing].addFood(Food.FoodType.BERRY, 1);
+                        if (startSelections[9]) state.players[state.playing].addFood(Food.FoodType.RAT, 1);
                         if (startSelections[10]) state.players[state.playing].addBonus(bonusOptions[0]);
                         else state.players[state.playing].addBonus(bonusOptions[1]);
                         if (state.playing == 3) {state.CURRENTEVENT.add("Game"); state.playing = 0;}
@@ -259,6 +259,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             
             }case "View Draw Birds" ->{
                 if (x>=20 && x<=70 && y>=400 && y<=450) state.CURRENTEVENT.removeLast();
+                endTurn(ProgramState.PlayerAction.DRAW_CARDS);
                 repaint();
 
             }case "View Feeder" -> {
@@ -352,35 +353,35 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 
                 if(x>=253 && x<=489 && y>=504 && y<=825){
                     out.println("Clicked first card to play");
-                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+0),state.habitatToPlayBird);
+                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+0),state.habitatToPlayBird, 0);
                     state.players[state.playing].getCardsInHand().remove(currentShowing*showing+0);
                     for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
                     state.CURRENTEVENT.removeLast();
                 } else if ( x >= 504 && x <= 740 && y >= 504 && y <= 825 ) {
                     out.println("Clicked Second card to play");
-                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+1),state.habitatToPlayBird);
+                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+1),state.habitatToPlayBird, 0);
                     state.players[state.playing].getCardsInHand().remove(currentShowing*showing+1);
                     for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
                     state.CURRENTEVENT.removeLast();
                 } else if ( x >= 755 && x <= 991 && y >= 504 && y <= 825 ) {
                     out.println("Clicked Third card to play");
-                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+2),state.habitatToPlayBird);
+                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+2),state.habitatToPlayBird, 0);
                     state.players[state.playing].getCardsInHand().remove(currentShowing*showing+2);
                     for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
                     state.CURRENTEVENT.removeLast();
                 } else if ( x >= 1000 && x <= 1237 && y >= 504 && y <= 825 ) {
                     out.println("Clicked Fourth card to play");
-                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+3),state.habitatToPlayBird);
+                    state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+3),state.habitatToPlayBird, 0);
                     state.players[state.playing].getCardsInHand().remove(currentShowing*showing+3);
                      state.CURRENTEVENT.removeLast();
+                    endTurn(ProgramState.PlayerAction.PLAY_BIRD);
                 }
                     
                     state.habitatToPlayBird = "";
             
 
                 repaint();
-    }
-        
+        }
     }
 }
     public void mouseReleased(MouseEvent e) {}
@@ -513,7 +514,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             if (counter %showing == 0) 
                 birdArrSplit.add(new ArrayList<Bird>());
             counter ++;
-            birdArrSplit.getLast().add(b);
+            birdArrSplit.get(birdArrSplit.size()-1).add(b);
         }
         if (state.players[state.playing].getCardsInHand().size()==0) return;
 
@@ -730,7 +731,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             if (counter %showing == 0) 
                 birdArrSplit.add(new ArrayList<Bird>());
             counter ++;
-            birdArrSplit.getLast().add(b);
+            birdArrSplit.get(birdArrSplit.size()-1).add(b);
         }
 
         for (int i=0;i<birdArrSplit.get(currentShowing).size();i++){
@@ -941,7 +942,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 Map<Integer, String> foodMap = new HashMap<Integer, String>();
                 String[] foodtypes = {"i", "s", "f", "b", "r", "","a"};
                 for (int i=13;i<20;i++) foodMap.put(i, foodtypes[i-13]);
-                ArrayList<String[]> foodArr = new ArrayList<String[]>();
+                ArrayList<Food.FoodType[]> foodArr = new ArrayList<Food.FoodType[]>();
                 ArrayList<String> foods = new ArrayList<String>();
                 //out.println("Food stuff instantiated");
                 if (items[20].equals("/")){
@@ -951,7 +952,18 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
 
                     for (String fo: foods){
                         String[] foo = {fo};
-                        foodArr.add(foo);
+                        //convert foo to Food.FoodType[] then add to foodArr
+                        Food.FoodType[] foodFoo = new Food.FoodType[foo.length];
+                        for (int i=0;i<foo.length;i++){
+                            switch (foo[i]){
+                                case "i" -> foodFoo[i] = Food.FoodType.INSECT;
+                                case "s" -> foodFoo[i] = Food.FoodType.SEED;
+                                case "f" -> foodFoo[i] = Food.FoodType.FISH;
+                                case "b" -> foodFoo[i] = Food.FoodType.BERRY;
+                                case "r" -> foodFoo[i] = Food.FoodType.RAT;
+                            }
+                        }
+                        foodArr.add(foodFoo);
                     }
                     
                 }else{
@@ -969,7 +981,17 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     String[] foox = new String[foo.size()];
                     for (int i=0;i<foo.size();i++) foox[i] = foo.get(i);
                     //out.println(Arrays.toString(foox));
-                    foodArr.add(foox);
+                    Food.FoodType[] foodFoods = new Food.FoodType[foox.length];
+                        for (int i=0;i<foox.length;i++){
+                            switch (foox[i]){
+                                case "i" -> foodFoods[i] = Food.FoodType.INSECT;
+                                case "s" -> foodFoods[i] = Food.FoodType.SEED;
+                                case "f" -> foodFoods[i] = Food.FoodType.FISH;
+                                case "b" -> foodFoods[i] = Food.FoodType.BERRY;
+                                case "r" -> foodFoods[i] = Food.FoodType.RAT;
+                            }
+                        }
+                    foodArr.add(foodFoods);
                 }
 
                 // Ability type stuff
@@ -1111,6 +1133,10 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         bonusOptions[0] = bonusArr.remove(0);
         bonusOptions[1] = bonusArr.remove(0);
         
+    }
+
+    public void endTurn(ProgramState.PlayerAction action) {
+        state.game.next(action);
     }
 
 }
